--- a/components/subreddit/Subreddit.module.css
+++ b/components/subreddit/Subreddit.module.css
@@ -1,5 +1,5 @@
 .subredditContainer img {
-    width: 45px;
+    max-width: 50px;
     max-height: 60px;
     margin-top: 1px;
 }
